# openvmm_fork2

./: Cargo.toml
Guide/src/: SUMMARY.md
Guide/src/dev_guide/tests/fuzzing/: netvsp.md
openhcl/hcl/src/: ioctl.rs
openhcl/underhill_core/src/: worker.rs
openhcl/underhill_core/src/dispatch/: mod.rs
openhcl/underhill_core/src/emuplat/: netvsp.rs
vm/devices/net/gdma/src/: bnic.rs
vm/devices/net/mana_driver/src/: queues.rs
vm/devices/net/net_backend/src/: lib.rs  loopback.rs
vm/devices/net/net_mana/fuzz/: .gitignore  Cargo.toml  fuzz_net_mana_tx_avail.rs  net_mana_tx_avail.dict
vm/devices/net/net_mana/src/: lib.rs  test.rs
vm/devices/net/netvsp/: Cargo.toml
vm/devices/net/netvsp/fuzz/: Cargo.toml  fuzz_helpers.rs  fuzz_netvsp_control.rs  fuzz_netvsp_interop.rs  fuzz_netvsp_link_status.rs  fuzz_netvsp_oid.rs  fuzz_netvsp_protocol.rs  fuzz_netvsp_rx_path.rs  fuzz_netvsp_save_restore.rs  fuzz_netvsp_subchannel.rs  fuzz_netvsp_synthetic_datapath.rs  fuzz_netvsp_vf_state.rs
vm/devices/net/netvsp/fuzz/fuzz_helpers/: endpoint.rs  mod.rs  nic_setup.rs  vmbus.rs
vm/devices/net/netvsp/src/: buffers.rs  lib.rs  rndisprot.rs  test.rs  test_helpers.rs
xtask/src/tasks/fuzz/: netvsp.rs
